--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
 <body>
     <div class="header">
-
-
         <div class="container">
             <div class="navbar">
                 <div class="logo">
@@ -267,8 +265,8 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half"></i>
                     </div>
-                    <img src="images/naruto.jpg">
-                    <h3>Naruto Uzumaki</h3>
+                    <img src="images/rhu.jpg">
+                    <h3>Rhutuja Kakade</h3>
                 </div>
             </div>
         </div>
